# AiManim

./: .gitignore  CONTRIBUTING.md  README.md  plan.md  pyproject.toml  requirements.txt
aimanim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
math2manim/: __init__.py
math2manim/cli/: main.py
math2manim/core/: __init__.py
math2manim/core/codegen/: __init__.py  manim_codegen.py
math2manim/core/executor/: __init__.py  runner.py
math2manim/core/planner/: __init__.py  scene_planner.py
math2manim/core/renderer/: render.py
math2manim/core/repair/: __init__.py  fixer.py
math2manim/core/stitcher/: __init__.py  stitch.py
math2manim/core/utils/: config.py  paths.py  secrets.py
math2manim/prompts/: codegen.txt  manim_skill.md  planner.txt  repair.txt
math2manim/providers/: base.py  factory.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
math2manim/schemas/: scene.py
math2manim/templates/: __init__.py  manim_template.py
math2manim/workflows/: langgraph_flow.py
tests/: test_cli_args.py  test_codegen_validation.py  test_config.py  test_manim_template_voiceover.py  test_pipeline_partial_stitch.py  test_pipeline_preflight.py  test_pipeline_smoke.py  test_provider_factory.py  test_scene_planner_regeneration.py  test_scene_schema.py  test_secrets.py  test_voiceover_preflight.py
