[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strugglemath"
version = "0.1.0"
description = "Prompt-to-Manim CLI pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "langgraph>=0.2",
  "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
math2manim = "math2manim.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
