[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimanim"
version = "0.1.0"
description = "AI-powered prompt-to-Manim CLI pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "langgraph>=0.2",
  "keyring>=25.0",
  "manim>=0.20.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
voice = [
  "manim-voiceover>=0.3.7",
  "gTTS>=2.5",
  "pyttsx3>=2.90",
]

[project.scripts]
aimanim = "math2manim.cli.main:cli"
math2manim = "math2manim.cli.main:cli"

[tool.setuptools.packages.find]
include = ["math2manim*"]
exclude = ["temp*", "outputs*", "media*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
